--- a/osi.desktop
+++ b/osi.desktop
@@ -2,7 +2,8 @@
 Name=OMX Simple Interface
 Comment=OMXPlayer simple interface
 Comment[it]=Semplice interfaccia per OMXPlayer
-Exec=/home/pi/Desktop/omx-simple-interface/start.sh %f
+Exec=/usr/share/osi/start.sh %f
 Icon=video
 Terminal=false
 Type=Application
+Categories=GTK;Utility;Application;
